--- a/config.toml
+++ b/config.toml
@@ -63,7 +63,7 @@ defaultContentLanguageInSubdir = false
   organizations = [ { name = "University of North Texas Health Science Center", url = "" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
-  avatar = "portrait.png"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
+  avatar = "my_portrait.png"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   #email = "james.mock@my.unthsc.edu"
   #address = "Building 1 Room 1, Stanford University, California, 90210, USA"
   #office_hours = "Monday 10:00 to 13:00 or email for appointment"
