change relativeurls to false in config.toml, and usebuild_site() to generate the final version for upload --- see  https://github.com/gcushen/hugo-academic/issues/111

--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ footnotereturnlinkcontents = "<sup>^</sup>"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 preserveTaxonomyNames = true
 paginate = 10
-relativeurls = true
+relativeurls = false
 #[permalinks]
 # post = "/:year/:month/:day/:slug/"
 
