--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@
 
 # The URL of your website.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://www.thomasmock.netlify.com/"
+baseurl = "https://thomasmock.netlify.com/"
 
 languageCode = "en-us"
 
@@ -20,7 +20,7 @@ footnotereturnlinkcontents = "<sup>^</sup>"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 preserveTaxonomyNames = true
 paginate = 10
-relativeurls = true
+relativeurls = false
 #[permalinks]
 # post = "/:year/:month/:day/:slug/"
 
